--- a/templates/common/base.html
+++ b/templates/common/base.html
@@ -83,7 +83,7 @@
 
       <!-- Content -->
       <main class="flex-1">
-        <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8 py-6">
+        <div class="py-6 {% block content_container_class %}max-w-6xl mx-auto px-4 sm:px-6 lg:px-8{% endblock %}">
 
           {% if messages %}
             <div class="space-y-2 mb-4">
